<resources>
    <string name="app_name">AQA</string>
    <string name="android_quiz_app">Android Quiz</string>
    <string name="mcq">short quiz, with a little animation</string>
    <string name="kernel">1. Android is based on which kernel?</string>
    <string name="linux">Linux</string>
    <string name="windows">Windows</string>
    <string name="ios">iOS</string>
    <string name="open_source">2. Which of the following driver\'s code is not open source?</string>
    <string name="bluetooth_driver">Bluetooth driver</string>
    <string name="wifi_driver">wifi driver</string>
    <string name="implicit_intent">implicit intent</string>
    <string name="explicit_intent">explicit intent</string>
    <string name="in_this_type_of_intent_the_sender_specifies_the_receiver">3. In this type of intent, the sender specifies the receiver:</string>
    <string name="what_does_anr_stand_for">4. What does ANR stand for?</string>
    <string name="application_not_recognized">Application Not Recognized</string>
    <string name="application_not_responding">Application Not Responding</string>
    <string name="what_does_apk_stand_for">5. What does APK stand for?</string>
    <string name="android_processing_kit">Android Processing Kit</string>
    <string name="android_packaging_kit">Android Packaging Kit</string>
    <string name="android_logo">Android Logo</string>
    <string name="_7_bonus_question_alc_stands_for">6. Bonus question: ALC stands for?</string>
    <string name="andela_learning_community">Andela Learning Community</string>
    <string name="adult_learning_center">Adult Learning Center</string>
    <string name="_150_days_of_alc">150 days of ALC</string>
    <string name="submit">Submit</string>
    <string name="alc_logo">alc logo</string>
    <string name="restart">Restart</string>
    <string name="your_score">Your score:</string>


    <!-- Trivia -->
    <string name="welcome_message">Welcome to 36 Trivia</string>
    <string name="enter_name_hint">Name of Player</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="background_image">Background Image</string>
    <string name="background_tint">Background tint</string>
    <string name="select_an_answer_to_continue">Select an Answer to continue</string>
    <string name="continue_text">Continue</string>
    <string name="give_up">Give up</string>
    <string name="quit">Quit</string>
    <string name="well_done">Well Done</string>
    <string name="your_score">Your score</string>
    <string name="play_another">Play Another</string>

    <string name="question_counter">%1$d of %2$d questions</string>
    <string name="see_summary">See Summary</string>
    <string name="play_instruction">To Play, enter your name and click start</string>
    <string name="home">Home</string>
    <string name="description_check_mark">Big Check mark indicating correct answer</string>

</resources>
